--- a/pug/index.pug
+++ b/pug/index.pug
@@ -36,7 +36,11 @@ block content
             li 
               a(href="deposit.html") Депозит
             li 
-              a(href="bankcard.html") Банковские карты
+              a(href="bankcards.html") Банковские карты
+            li 
+              a(href="bankcard.html") Одна карта
+            li 
+              a(href="addresses.html") Мои адреса
       //	/navpage
 
     include core/footer.pug
