--- a/scss/style.scss
+++ b/scss/style.scss
@@ -86,7 +86,10 @@ $gray: #E9E9E9;
 @import 'blocks/orders';
 @import 'blocks/order';
 @import 'blocks/deposit';
+@import 'blocks/bankcards';
 @import 'blocks/bankcard';
+@import 'blocks/input';
+@import 'blocks/addresses';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
