--- a/scss/blocks/bankcard.scss
+++ b/scss/blocks/bankcard.scss
@@ -2,51 +2,26 @@
 .bankcard { 
   padding-top: 20px;
   padding-bottom: 100px;
-  .backtitle {
-    margin-bottom: 58px;
-  }
-  &__cards {
-    margin-bottom: 40px;
+  .row {
+    display: flex;
+    margin-top: -35px;
+    > * {
+      padding-top: 35px;
+    }
+    &--mb35 {
+      margin-bottom: 35px;
+    }
   }
   &__col {
-    @include col(4);
-    @include col-sm(6);
-    @include col-xs(12);
-  }
-  &__card {
-    display: block;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
-    border-radius: 13px;
-    background-color: $gray;
-    color: $text;
-    position: relative;
-    &:after {
-      content: '';
-      display: block;
-      padding-top: 54%;
+    &--big {
+      width: 370px + $gutter;
     }
-    &:hover {
-      box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-      background-color: #fff;
+    &--small {
+      width: 170px + $gutter;
     }
   }
-  &__content {
-    display: flex;
-    padding: 20px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  &__icon {
-    width: 45px;
-    margin-right: 15px;
-  }
-  &__title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 25px;
+  .backtitle {
+    margin-bottom: 60px;
   }
   &__btn {
     .btn {
@@ -57,23 +32,35 @@
   @media (max-width: $break_sm) {
     padding-top: 0;
     padding-bottom: 50px;
+    &__col {
+      &--big {
+        width: 270px + $gutter;
+      }
+      &--small {
+        width: 140px + $gutter;
+      }
+    }
   }
   @media (max-width: $break_xs) {
     .backtitle {
-      margin-bottom: 40px;
+      margin-bottom: 35px;
     }
-    &__cards {
-      margin-bottom: 30px;
+    .row {
+      margin-left: -20px;
+      > * {
+        padding-left: 20px;
+      }
     }
-    &__card {
-      &:after {
-        content: '';
-        display: block;
-        padding-top: 0;
-        height: 70px;
+    &__col {
+      &--big {
+        width: 100%;
+      }
+      &--small {
+        width: 50%;
       }
     }
     &__btn {
+      margin-top: 40px;
       .btn {
         max-width: none;
       }
