--- a/css/style.css
+++ b/css/style.css
@@ -2634,11 +2634,22 @@ svg {
 .bankcard .row--mb35 {
   margin-bottom: 35px;
 }
+.bankcard__col {
+  width: 100%;
+}
 .bankcard__col--big {
   width: 400px;
 }
 .bankcard__col--small {
   width: 200px;
+}
+.bankcard__col--quarter {
+  width: 25%;
+}
+@media screen and (max-width: 1050px) {
+  .bankcard__col--quarter {
+    width: 50%;
+  }
 }
 .bankcard .backtitle {
   margin-bottom: 60px;
@@ -2646,6 +2657,43 @@ svg {
 .bankcard__btn .btn {
   width: 100%;
   max-width: 320px;
+}
+.bankcard__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-top: -10px;
+}
+.bankcard__buttons .btn {
+  width: 100%;
+  max-width: 360px;
+}
+.bankcard__delete {
+  margin-left: 10px;
+  font-weight: 300;
+  font-size: 17px;
+  line-height: 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: transparent;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+.bankcard__delete:hover {
+  color: red;
 }
 @media (max-width: 768px) {
   .bankcard {
@@ -2660,6 +2708,19 @@ svg {
   }
 }
 @media (max-width: 500px) {
+  .bankcard {
+    padding-bottom: 0;
+  }
+  .bankcard .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-height: 100vh;
+  }
   .bankcard .backtitle {
     margin-bottom: 35px;
   }
@@ -2681,6 +2742,33 @@ svg {
   .bankcard__btn .btn {
     max-width: none;
   }
+  .bankcard__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+  }
+  .bankcard__buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+  }
+  .bankcard__buttons .btn {
+    max-width: none;
+  }
+  .bankcard__delete {
+    margin: 20px 0;
+  }
 }
 
 /* /bankcard */
@@ -2701,6 +2789,7 @@ svg {
   padding: 0 20px;
   border: 1px solid #FFFFFF;
   border-radius: 13px;
+  outline: none;
   background-color: #E9E9E9;
   font-weight: 700;
   font-size: 20px;
@@ -2728,6 +2817,55 @@ svg {
 }
 .input__icon svg, .input__icon img {
   display: block;
+}
+.input__select {
+  position: relative;
+}
+.input__select select {
+  width: 100%;
+  height: 60px;
+  padding: 0 20px;
+  border: 1px solid #FFFFFF;
+  border-radius: 13px;
+  outline: none;
+  background-color: #E9E9E9;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+}
+.input__select select::-ms-expand {
+  display: none;
+}
+.input__arrow {
+  width: 12px;
+  height: 8px;
+  background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11 1.5498L6.1 6.4498' stroke='%23212629' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round'/%3E%3Cpath d='M1.10156 1.5498L6.10156 6.4498' stroke='%23212629' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round'/%3E%3C/svg%3E%0A");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  pointer-events: none;
+}
+.input__textarea textarea {
+  width: 100%;
+  height: 140px;
+  padding: 15px 20px;
+  border: 1px solid #FFFFFF;
+  border-radius: 13px;
+  outline: none;
+  background-color: #E9E9E9;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 25px;
+  resize: none;
 }
 
 /* /input */
