--- a/pug/index.pug
+++ b/pug/index.pug
@@ -41,6 +41,8 @@ block content
               a(href="bankcard.html") Одна карта
             li 
               a(href="addresses.html") Мои адреса
+            li
+              a(href="address.html") Один дрес
       //	/navpage
 
     include core/footer.pug
