--- a/pug/addresses.pug
+++ b/pug/addresses.pug
@@ -1,7 +1,7 @@
 extends core/base.pug
 
 block title 
-  title Банковские карты
+  title Мои адреса
 
 block content
 
@@ -25,7 +25,7 @@ block content
                 path(d="M1 8.09961H21" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
                 path(d="M1 8.09961L8.1 15.0996" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
                 path(d="M1 8.1L8.1 1" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
-            h1.backtitle__text Привязанные карты
+            h1.backtitle__text Мои адреса
             a(href="home.html").backtitle__cross 
           //	/backtitle
 
