--- a/pug/index.pug
+++ b/pug/index.pug
@@ -43,6 +43,8 @@ block content
               a(href="addresses.html") Мои адреса
             li
               a(href="address.html") Один дрес
+            li 
+              a(href="information.html") Мои данные
       //	/navpage
 
     include core/footer.pug
