--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,16 @@ svg {
 .row.gy > * {
   padding-top: 30px;
 }
+.row--nowrap {
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+}
+@media (max-width: 500px) {
+  .row--nowrap {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+}
 
 .wrapper {
   width: 100%;
@@ -2640,6 +2650,9 @@ svg {
 .bankcard__col--big {
   width: 400px;
 }
+.bankcard__col--medium {
+  width: 300px;
+}
 .bankcard__col--small {
   width: 200px;
 }
@@ -2650,6 +2663,12 @@ svg {
   .bankcard__col--quarter {
     width: 50%;
   }
+}
+.bankcard__col--flex-grow {
+  width: auto;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
 }
 .bankcard .backtitle {
   margin-bottom: 60px;
@@ -2668,7 +2687,7 @@ svg {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: -10px;
+  margin-top: 30px;
 }
 .bankcard__buttons .btn {
   width: 100%;
@@ -2731,6 +2750,9 @@ svg {
     padding-left: 20px;
   }
   .bankcard__col--big {
+    width: 100%;
+  }
+  .bankcard__col--medium {
     width: 100%;
   }
   .bankcard__col--small {
