--- a/scss/blocks/bankcard.scss
+++ b/scss/blocks/bankcard.scss
@@ -17,12 +17,19 @@
     &--big {
       width: 370px + $gutter;
     }
+    &--medium {
+      width: 270px + $gutter;
+    }
     &--small {
       width: 170px + $gutter;
     }
     &--quarter {
       @include col(3);
       @include col-md(6);
+    }
+    &--flex-grow {
+      width: auto;
+      flex-grow: 1;
     }
   }
   .backtitle {
@@ -38,7 +45,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: -10px;
+    margin-top: 30px;
     .btn {
       width: 100%;
       max-width: 360px;
@@ -90,6 +97,9 @@
     }
     &__col {
       &--big {
+        width: 100%;
+      }
+      &--medium {
         width: 100%;
       }
       &--small {
