--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,6 +90,8 @@ $gray: #E9E9E9;
 @import 'blocks/bankcard';
 @import 'blocks/input';
 @import 'blocks/addresses';
+@import 'blocks/cart';
+@import 'blocks/reccomend';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
