--- a/pug/index.pug
+++ b/pug/index.pug
@@ -45,6 +45,8 @@ block content
               a(href="address.html") Один дрес
             li 
               a(href="information.html") Мои данные
+            li 
+              a(href="cart.html") Корзина
       //	/navpage
 
     include core/footer.pug
