--- a/scss/blocks/cart.scss
+++ b/scss/blocks/cart.scss
@@ -130,6 +130,7 @@
       left: 30px;
       right: 30px;
       bottom: 20px;
+      z-index: 3;
       .btn {
         max-width: none;
         background-color: #fff;
