--- a/pug/addresses.pug
+++ b/pug/addresses.pug
@@ -32,13 +32,13 @@ block content
           .addresses__cards
             .row.gy
               .addresses__col 
-                a(href="bankcard.html").addresses__card 
+                a(href="address.html").addresses__card 
                   .addresses__title Дом
                   .addresses__text 
                     p Меркурий Сити Тауэр, кв./офис 62, этаж 25, 
                     p Для охраны 62
               .addresses__col 
-                a(href="bankcard.html").addresses__card 
+                a(href="address.html").addresses__card 
                   .addresses__title Работа
                   .addresses__text 
                     p Меркурий Сити Тауэр, кв./офис 62, этаж 25, 
