--- a/pug/index.pug
+++ b/pug/index.pug
@@ -47,6 +47,8 @@ block content
               a(href="information.html") Мои данные
             li 
               a(href="cart.html") Корзина
+            li 
+              a(href="order.html") Оформление заказа
       //	/navpage
 
     include core/footer.pug
