--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,7 @@ $gray: #E9E9E9;
 @import 'blocks/addresses';
 @import 'blocks/cart';
 @import 'blocks/reccomend';
+@import 'blocks/fillorder';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
