--- a/css/style.css
+++ b/css/style.css
@@ -3244,15 +3244,27 @@ svg {
   padding-bottom: 100px;
 }
 .fillorder .backtitle {
-  margin-bottom: 58px;
+  margin-bottom: 38px;
 }
 .fillorder__triggers {
-  margin-bottom: 42px;
+  padding: 20px 0;
+  margin-bottom: 22px;
+  margin-left: -10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-y: auto;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.fillorder__triggers::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 .fillorder__triggers li {
-  display: inline-block;
   padding: 9px 20px;
-  margin-right: 10px;
+  margin-left: 10px;
   background-color: #E9E9E9;
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
@@ -3268,6 +3280,9 @@ svg {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+}
+.fillorder__triggers li a {
+  color: #212629;
 }
 .fillorder__triggers li.active {
   -webkit-box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
@@ -3293,11 +3308,6 @@ svg {
 .fillorder__item {
   display: block;
   min-height: 70px;
-  padding: 22px 20px;
-  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
-  border-radius: 13px;
-  background-color: #E9E9E9;
   margin-bottom: 30px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -3308,11 +3318,23 @@ svg {
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  position: relative;
 }
-.fillorder__item:hover {
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  background-color: #fff;
+.fillorder__item.is-active .fillorder__item-container {
+  -webkit-box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
+  box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
+  z-index: 3;
+}
+.fillorder__item-container {
+  padding: 22px 20px;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+  border-radius: 13px;
+  background-color: #E9E9E9;
+  position: relative;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
 .fillorder__title {
   font-weight: 700;
@@ -3368,6 +3390,7 @@ svg {
 }
 .fillorder__val-icon svg, .fillorder__val-icon img {
   display: block;
+  fill: #212629;
 }
 .fillorder__btn {
   max-width: 360px;
@@ -3380,6 +3403,7 @@ svg {
   -ms-flex-positive: 1;
   flex-grow: 1;
   margin-left: 30px;
+  padding-top: 80px;
 }
 .fillorder__textarea {
   position: relative;
@@ -3425,6 +3449,78 @@ svg {
   top: 20px;
   left: 20px;
 }
+.fillorder__drop {
+  padding: 10px 20px;
+  background: #212629;
+  -webkit-box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+  border-radius: 0 0 40px 13px;
+  position: absolute;
+  top: calc(100% - 10px);
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  visibility: hidden;
+}
+.fillorder__drop.open {
+  visibility: visible;
+}
+.fillorder__droplist {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 20px;
+  color: #fff;
+}
+.fillorder__dropitem:not(:last-child) .fillorder__droplabel {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+.fillorder__dropinput {
+  position: absolute;
+  visibility: hidden;
+}
+.fillorder__droplabel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+  padding: 20px 0;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.fillorder__droplabel:hover .fillorder__droptext {
+  -webkit-transform: translate(5px, 0);
+  -ms-transform: translate(5px, 0);
+  transform: translate(5px, 0);
+}
+.fillorder__dropicon {
+  width: 23px;
+  margin-right: 20px;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+.fillorder__dropicon svg {
+  display: block;
+  fill: #fff;
+}
+.fillorder__droptext {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+.fillorder__dropbilling {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+}
 @media (min-width: 769px) {
   .fillorder__triggers li:hover:not(.active) {
     background-color: #fff;
@@ -3433,6 +3529,11 @@ svg {
   }
   .fillorder__textarea-label.active {
     visibility: hidden;
+  }
+  .fillorder__item:hover:not(.is-active) .fillorder__item-container {
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
   }
 }
 @media (max-width: 768px) {
@@ -3446,6 +3547,7 @@ svg {
   .fillorder__comment {
     margin-left: 0;
     margin-top: -10px;
+    padding-top: 0;
   }
   .fillorder__items {
     max-width: none;
@@ -3469,10 +3571,10 @@ svg {
 }
 @media (max-width: 500px) {
   .fillorder .backtitle {
-    margin-bottom: 20px;
+    margin-bottom: 0;
   }
   .fillorder__triggers {
-    margin-bottom: 33px;
+    margin-bottom: 13px;
   }
   .fillorder__title {
     margin-bottom: 5px;
@@ -3483,6 +3585,11 @@ svg {
   }
   .fillorder__btn {
     max-width: none;
+  }
+}
+@media (max-width: 370px) {
+  .fillorder__name-text {
+    display: none;
   }
 }
 
