--- a/scss/blocks/fillorder.scss
+++ b/scss/blocks/fillorder.scss
@@ -3,14 +3,24 @@
   padding-top: 20px;
   padding-bottom: 100px;
   .backtitle {
-    margin-bottom: 58px;
+    margin-bottom: 38px;
   }
   &__triggers {
-    margin-bottom: 42px;
+    padding: 20px 0;
+    margin-bottom: 22px;
+    margin-left: -10px;
+    display: flex;
+    overflow-y: auto;
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+    }
     li {
-      display: inline-block;
       padding: 9px 20px;
-      margin-right: 10px;
+      margin-left: 10px;
       background-color: $gray;
       box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
       border-radius: 20px;
@@ -20,6 +30,9 @@
       cursor: pointer;
       user-select: none;
       transition: 0.3s;
+      a {
+        color: $text;
+      }
       &.active {
         box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
         cursor: default;
@@ -46,19 +59,26 @@
   &__item {
     display: block;
     min-height: 70px;
-    padding: 22px 20px;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
-    border-radius: 13px;
-    background-color: $gray;
     margin-bottom: 30px;
     cursor: pointer;
     user-select: none;
     color: $text;
     transition: 0.3s;
-    &:hover {
-      box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-      background-color: #fff;
+    position: relative;
+    &.is-active {
+      .fillorder__item-container {
+        box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
+        z-index: 3;
+      }
     }
+  }
+  &__item-container {
+    padding: 22px 20px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.08), -1px -1px 6px rgba(255, 255, 255, 0.5), -5px -5px 20px #FFFFFF, 5px 5px 20px #D3D3D3;
+    border-radius: 13px;
+    background-color: $gray;
+    position: relative;
+    transition: 0.3s;
   }
   &__title {
     font-weight: 700;
@@ -101,6 +121,7 @@
     margin-left: 7px;
     svg, img {
       display: block;
+      fill: $text;
     }
   }
   &__btn {
@@ -112,6 +133,7 @@
   &__comment {
     flex-grow: 1;
     margin-left: 30px;
+    padding-top: 80px;
   }
   &__textarea {
     position: relative;
@@ -141,6 +163,69 @@
     top: 20px;
     left: 20px;
   }
+  &__drop {
+    padding: 10px 20px;
+    background: $text;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.05), 40px 40px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 40px 13px;
+    position: absolute;
+    top: calc(100% - 10px);
+    left: 0;
+    width: 100%;
+    z-index: 2;
+    visibility: hidden;
+    &.open {
+      visibility: visible;
+    }
+  }
+  &__droplist {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 20px;
+    color: #fff;
+  }
+  &__dropitem {
+    &:not(:last-child) {
+      .fillorder__droplabel {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      }
+    }
+  }
+  &__dropinput {
+    position: absolute;
+    visibility: hidden;
+  }
+  &__droplabel {
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding: 20px 0;
+    cursor: pointer;
+    user-select: none;
+    &:hover {
+      .fillorder__droptext {
+        transform: translate(5px,0);
+      }
+    }
+  }
+  &__dropicon {
+    width: 23px;
+    margin-right: 20px;
+    flex-shrink: 0; 
+    svg {
+      display: block;
+      fill: #fff;
+    }
+  }
+  &__droptext {
+    transition: 0.3s;
+  }
+  &__dropbilling {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(0,-50%);
+  }
   @media (min-width: $break_sm + 1) {
     &__triggers {
       li {
@@ -155,6 +240,14 @@
         visibility: hidden;
       }
     }
+    &__item {
+      &:hover:not(.is-active) {
+        .fillorder__item-container {
+          box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+          background-color: #fff;
+        }
+      }
+    }
   }
   @media (max-width: $break_sm) {
     padding-top: 0;
@@ -165,6 +258,7 @@
     &__comment {
       margin-left: 0;
       margin-top: -10px;
+      padding-top: 0;
     }
     &__items {
       max-width: none;
@@ -190,10 +284,10 @@
   }
   @media (max-width: $break_xs) {
     .backtitle {
-      margin-bottom: 20px;
+      margin-bottom: 0;
     }
     &__triggers {
-      margin-bottom: 33px;
+      margin-bottom: 13px;
     }
     &__title {
       margin-bottom: 5px;
@@ -204,6 +298,11 @@
     }
     &__btn {
       max-width: none;
+    }
+  }
+  @media (max-width: 370px) {
+    &__name-text {
+      display: none;
     }
   }
 }
