--- a/pug/index.pug
+++ b/pug/index.pug
@@ -49,6 +49,8 @@ block content
               a(href="cart.html") Корзина
             li 
               a(href="order.html") Оформление заказа
+            li 
+              a(href="modals.html") Главная (модалки)
       //	/navpage
 
     include core/footer.pug
