--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,6 +93,7 @@ $gray: #E9E9E9;
 @import 'blocks/cart';
 @import 'blocks/reccomend';
 @import 'blocks/fillorder';
+@import 'blocks/modal';
 // @import 'blocks/menu';
 // @import 'blocks/accordion';
 // @import 'blocks/modal';
