--- a/pug/order.pug
+++ b/pug/order.pug
@@ -54,8 +54,8 @@ block content
                           .fillorder__text 
                             p Меркурий Сити Тауэр, кв./офис 62, этаж 25,
                             p Для охраны 62
-                .fillorder__item.js-drop-btn(data-drop="payDrop")
-                  .fillorder__item-container
+                .fillorder__item
+                  .fillorder__item-container.js-drop-btn(data-drop="payDrop")
                     .fillorder__flex 
                       .fillorder__name 
                         .fillorder__name-icon 
@@ -67,7 +67,9 @@ block content
                         .fillorder__val-icon 
                           svg(width="24" height="15" viewBox="0 0 24 15" fill="none" xmlns="http://www.w3.org/2000/svg")
                             path(d="M15.8 0C14.2 0 12.7 0.5 11.5 1.4C10.3 0.5 8.8 0 7.3 0C3.3 0 0 3.3 0 7.3C0 11.3 3.3 14.6 7.3 14.6C8.9 14.6 10.4 14.1 11.6 13.2C12.8 14.1 14.3 14.6 15.9 14.6C19.9 14.6 23.2 11.3 23.2 7.3C23.2 3.3 19.7 0 15.8 0ZM11.5 11.1C10.6 10.1 10 8.7 10 7.2C10 5.7 10.6 4.4 11.5 3.3C12.4 4.3 13 5.7 13 7.2C13 8.7 12.4 10.1 11.5 11.1ZM15.8 13C14.7 13 13.6 12.7 12.7 12.1C13.9 10.8 14.6 9.1 14.6 7.3C14.6 5.5 13.9 3.8 12.7 2.5C13.6 1.9 14.7 1.6 15.8 1.6C19 1.6 21.6 4.2 21.6 7.4C21.6 10.6 18.9 13 15.8 13Z")
+                            
                   .fillorder__drop#payDrop
+                    .fillorder__close.js-drop-close(data-drop="payDrop")
                     .fillorder__droplist 
                       .fillorder__dropitem 
                         input#payDeposit(type="radio" name="pay").fillorder__dropinput
@@ -113,7 +115,7 @@ block content
                               path(d="M2.3 0C1.1 0 0.1 0.9 0 2.1C0 2.2 0 2.2 0 2.3V3.8V4.5V15.7C0 17 1 18 2.3 18H15.8C17 18 18 17 18 15.8V5.3C18 4 17 3 15.8 3H2.3C1.8 3 1.5 2.7 1.5 2.3C1.5 1.9 1.8 1.6 2.2 1.6H14.7C15.1 1.6 15.5 1.3 15.5 0.9C15.5 0.5 15.2 0 14.8 0H2.3ZM1.5 4.5H2.2H15.7C16.1 4.5 16.4 4.8 16.4 5.2V15.7C16.4 16.1 16.1 16.4 15.7 16.4H2.3C1.9 16.4 1.6 16.1 1.6 15.7V4.5H1.5ZM13.8 9C13.1 9 12.6 9.6 12.6 10.2C12.6 10.9 13.2 11.4 13.8 11.4C14.4 11.4 15 10.8 15 10.2C15 9.6 14.4 9 13.8 9Z")
                           span.fillorder__droptext Наличные
                 .fillorder__item
-                  .fillorder__item-container
+                  .fillorder__item-container.js-drop-btn(data-drop="timeDrop")
                     .fillorder__flex 
                       .fillorder__name 
                         .fillorder__name-icon
@@ -121,6 +123,10 @@ block content
                             path(d="M7.8 0C7.3 0 7 0.3 7 0.7C7 1.1 7.3 1.5 7.7 1.5H8.2V2.5C3.6 2.9 0 6.8 0 11.5C0 16.5 4 20.5 9 20.5C14 20.5 18 16.5 18 11.5C18 9.3 17.2 7.3 15.9 5.7L16.8 4.8C17.1 4.5 17.1 4 16.8 3.7C16.7 3.5 16.5 3.5 16.2 3.5C16 3.5 15.8 3.6 15.7 3.7L14.8 4.6C13.4 3.4 11.7 2.7 9.7 2.5V1.5H10.2C10.6 1.5 11 1.2 11 0.8C11 0.3 10.7 0 10.3 0H7.8ZM8.9 4C9 4 9 4 9.1 4C11.1 4 12.9 4.8 14.3 6.1L14.4 6.2C15.7 7.6 16.6 9.4 16.6 11.5C16.6 15.7 13.3 19 9.1 19C4.9 19 1.6 15.7 1.6 11.5C1.5 7.4 4.8 4.1 8.9 4ZM12.2 7.5C12 7.5 11.8 7.6 11.7 7.7L9.4 10C9.3 10 9.1 10 9 10C8.2 10 7.5 10.7 7.5 11.5C7.5 12.3 8.2 13 9 13C9.8 13 10.5 12.3 10.5 11.5C10.5 11.4 10.5 11.2 10.4 11.1L12.7 8.8C13 8.5 13 8 12.7 7.7C12.6 7.6 12.4 7.5 12.2 7.5Z" fill="#212629")
                         .fillorder__name-text Когда
                       .fillorder__val Как можно скорее
+                  .fillorder__drop#timeDrop
+                    .fillorder__close.js-drop-close(data-drop="payDrop")
+                    .fillorder__dark-block 
+                      .fillorder__
               .fillorder__comment 
                 .fillorder__textarea.js-textarea
                   .fillorder__textarea-label.js-textareaLabel Комментарий (если есть)
