--- a/scss/blocks/fillorder.scss
+++ b/scss/blocks/fillorder.scss
@@ -60,17 +60,9 @@
     display: block;
     min-height: 70px;
     margin-bottom: 30px;
-    cursor: pointer;
-    user-select: none;
     color: $text;
     transition: 0.3s;
     position: relative;
-    &.is-active {
-      .fillorder__item-container {
-        box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
-        z-index: 3;
-      }
-    }
   }
   &__item-container {
     padding: 22px 20px;
@@ -79,6 +71,10 @@
     background-color: $gray;
     position: relative;
     transition: 0.3s;
+    &.is-active {
+      box-shadow: inset -1px -1px 3px rgba(255, 255, 255, 0.8), inset -6px -6px 5px rgba(255, 255, 255, 0.3), inset 1px 1px 3px rgba(0, 0, 0, 0.15), inset 6px 6px 5px rgba(0, 0, 0, 0.06);
+      z-index: 3;
+    }
   }
   &__title {
     font-weight: 700;
@@ -226,6 +222,14 @@
     right: 0;
     transform: translate(0,-50%);
   }
+  &__close {
+    display: none;
+  }
+  &__dark-block {
+    padding: 20px 17px;
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 30px 30px 30px 3px;
+  }
   @media (min-width: $break_sm + 1) {
     &__triggers {
       li {
@@ -280,6 +284,51 @@
     &__btn {
       max-width: 360px;
       margin-top: 30px;
+    }
+    &__drop {
+      padding-top: 50px;
+      position: fixed;
+      bottom: -1000px;
+      left: 20px;
+      right: 20px;
+      top: auto;
+      width: auto;
+      max-height: 100vh;
+      overflow-y: auto;
+      border-radius: 40px 40px 40px 5px;
+      z-index: 4;
+      transition: 0.3s;
+      &.open {
+        bottom: 20px;
+      }
+    }
+    &__close {
+      display: block;
+      width: 24px;
+      height: 24px;
+      background-color: #fff;
+      border-radius: 100%;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      cursor: pointer;
+      user-select: none;
+      &:after,&:before {
+        content: '';
+        display: block;
+        width: 55%;
+        height: 2px;
+        background-color: $text;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+      }
+      &:after {
+        transform: translate(-50%,-50%) rotate(45deg);
+      }
+      &:before {
+        transform: translate(-50%,-50%) rotate(-45deg);
+      }
     }
   }
   @media (max-width: $break_xs) {
