--- a/pug/modals.pug
+++ b/pug/modals.pug
@@ -299,7 +299,7 @@ block content
           .modal__input 
             .input 
               .input__input 
-                input(type="text").js-phone-code
+                input(type="text" placeholder="0 0 0 0").js-phone-code
           .modal__text Повторно получить код можно <br>через 0:12
         .modal_close.js-modal-close
         .modal__arrow.js-modal-close
@@ -318,7 +318,7 @@ block content
           .modal__input 
             .input 
               .input__input 
-                input(type="text").js-phone-code
+                input(type="text" placeholder="0 0 0 0").js-phone-code
           .modal__buttons 
             button(type="submit").btn.btn--black Получить новый код
         .modal_close.js-modal-close
